# adaboost-coursework

./: kaggle.ipynb  pyproject.toml  requirements.txt
examples/: example.py
src/: classifier.py  utils.py  weak_learner.py
tests/: tests.py
