[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "adaboost"
version = "0.1.0"
description = "AdaBoost implementation"
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.20.0",
    "matplotlib>=3.3.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0"
]

[tool.setuptools]
packages = ["src"]